# FleetLang

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  compile_and_restart_lsp.sh  flake.nix  highlight.vim  index.html  load.vim  lsan.supp  mandelbrot.fl  native_helpers.c  shell.nix  stats.html  test.fl
.github/workflows/: main.yml
Web-Demo/: package-lock.json  package.json
assets/: fleetls_wasm_bg-2_2wICZC.wasm  fleetls_wasm_bg-BGqMcqzV.wasm  fleetls_wasm_bg-BJB0p-fx.wasm  fleetls_wasm_bg-Birw_tBB.wasm  fleetls_wasm_bg-BwQVbaG_.wasm  fleetls_wasm_bg-CnG7grdW.wasm  fleetls_wasm_bg-D2s8qHAQ.wasm  fleetls_wasm_bg-Dk0IGyTX.wasm  fleetls_wasm_bg-DkikIk_z.wasm  fleetls_wasm_bg-Dn1h1Wc5.wasm  fleetls_wasm_bg-DtJZAm8y.wasm  fleetls_wasm_bg-KuFWEMx9.wasm  fleetls_wasm_bg-L4jC-iDM.wasm  fleetls_wasm_bg-Tya7aOly.wasm  fleetls_wasm_bg-klfxmoqo.wasm  index--UR1zSku.css  index-B86v5T1M.js  index-BUwzWfx9.js  index-C-ydPO8j.js  index-C0FRzwzq.js  index-C0u-6Jj3.js  index-C2IvzFRn.js  index-CAxGe9Pa.js  index-CAzrdFQe.js  index-CCarfKoV.js  index-CJazaY_w.js  index-CPUZxo9J.js  index-CQS6OOYo.js  index-DCxnl7aY.js  index-DDx86MSU.js  index-DcTzLWO8.js  index-Ddn6v-_E.css  index-DegmNXA4.js  index-JHhxQXs0.js  index-TfoWwg86.js  index-WrC-7esJ.js  index-m9q51zDj.css  index-u7-sPSbG.js
clangd-standalone/: .gitignore  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
clangd-standalone/src/: vite-env.d.ts
examples/: .gitignore  Makefile  README.md  hello_world.fl  mandelbrot_set.fl  measure.py  native_helpers.c  raytracing.fl
fl_runtime/: .gitignore  Makefile  compute.comp  dso_handle.cpp  example.cpp  fl_runtime.cpp  fl_runtime.h  testhook.c
fleet/: Cargo.toml
fleet/src/: ast.rs  ast_to_dm.rs  document_model.rs  error_reporting.rs  escape.rs  generate_c.rs  generate_glsl.rs  infra.rs  ir_generator.rs  lib.rs  natural_language.rs  parser.rs  tokenizer.rs
fleet/src/passes/: add_leading_trivia_pass.rs  add_trailing_trivia_pass.rs  ast_json_dump.rs  err_missing_type_in_parameter.rs  err_too_few_iterators.rs  find_containing_node.rs  find_node_bonds.rs  find_node_bounds.rs  find_node_by_id.rs  first_token_mapper.rs  first_token_of_node.rs  fix_non_block_statements.rs  fix_trailing_comma.rs  function_termination_analysis.rs  last_token_mapper.rs  lint_variable_names.rs  lvalue_reducer.rs  mod.rs  partial_visitor.rs  pass_manager.rs  remove_parens.rs  runtime_type.rs  save_artifact_pass.rs  scope_analysis.rs  simple_function_pass.rs  stat_tracker.rs  store_pass.rs  swap_pass.rs  top_level_binding_finder.rs  type_concretisation_pass.rs  type_propagation.rs  union_find_set.rs
fleet/tests/: main.rs
fleet/tests/common/: mod.rs
fleet/tests/examples/: hello_world.fl  hello_world.rs  mandelbrot_set.fl  mandelbrot_set.rs  mod.rs
fleet/tests/format/: arrays.rs  binary_op.rs  boolean_op.rs  comments.rs  conditional_statements.rs  function.rs  loops.rs  mod.rs  structs.rs  type_inference.rs  unary_op.rs  variables.rs
fleet/tests/invalid/: arrays.rs  binary_op.rs  boolean_op.rs  boolean_op_float.rs  comments.rs  conditional_statements.rs  function.rs  loops.rs  mod.rs  on_gpu.rs  sized_integers.rs  structs.rs  type_inference.rs  unary_op.rs  unary_op_float.rs  variables.rs
fleet/tests/valid/: arrays.rs  binary_op.rs  binary_op_float.rs  boolean_op.rs  boolean_op_float.rs  conditional_statements.rs  floats.rs  function.rs  loops.rs  mod.rs  naming.rs  on_gpu.rs  sized_integers.rs  structs.rs  type_inference.rs  unary_op.rs  unary_op_float.rs  variables.rs
fleetc/: Cargo.toml
fleetc/src/: ast_json_dump.rs  main.rs
fleetls/: Cargo.toml
fleetls-lib/: Cargo.toml
fleetls-lib/src/: extract_semantic_tokens_pass.rs  lib.rs
fleetls-wasm/: Cargo.toml  Makefile  compile_and_copy.sh
fleetls-wasm/src/: lib.rs
fleetls/src/: flush_on_write.rs  main.rs
src/: ast.rs  ast_to_dm.rs  document_model.rs  escape.rs  generate_c.rs  infra.rs  ir_generator.rs  lib.rs  parser.rs  pretty_print.rs  tokenizer.rs
src/passes/: add_leading_trivia_pass.rs  add_trailing_trivia_pass.rs  ast_pass.rs  err_missing_type_in_parameter.rs  find_containing_node.rs  find_node_bonds.rs  fix_non_block_statements.rs  fix_trailing_comma.rs  function_termination_analysis.rs  mod.rs  partial_visitor.rs  remove_parens.rs  type_propagation.rs
template/: .gitignore  Makefile  compute.comp  fl_runtime.cpp  fl_runtime.h  main.cpp
tests/common/: mod.rs
tests/format/: arrays.rs  binary_op.rs  boolean_op.rs  comments.rs  conditional_statements.rs  function.rs  loops.rs  mod.rs  unary_op.rs  variables.rs
tests/invalid/: arrays.rs  boolean_op.rs  conditional_statements.rs  function.rs  loops.rs  mod.rs  sized_integers.rs  type_inference.rs  unary_op.rs  variables.rs
web-demo/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
web-demo-result-link/: package.json
(+43 files in other folders)
