[package]
name = "fleet_lang"
version = "0.1.0"
edition = "2024"
default-run = "fleetc"

[lib]
name = "fleet"
path = "src/lib.rs"

[[bin]]
name = "fleetc"
path = "src/bin/fleetc/main.rs"

[[bin]]
name = "fleetls"
path = "src/bin/fleetls/main.rs"

[dependencies]
indent = "0.1.1"
indoc = "2.0.6"
inkwell = { version = "0.5.0", features = ["llvm18-0-force-static"] }
itertools = "0.14.0"
tokio = { version = "1.44.2", features = ["full"] }
tower-lsp = "0.20.0"

