[workspace]
resolver = "3"
members = ["fleet", "fleetc", "fleetls", "fleetls-lib"]
default-members = ["fleet", "fleetc", "fleetls", "fleetls-lib"]


#[lib]
#name = "fleet"
#path = "src/lib.rs"
#crate-type = ["rlib", "cdylib"]
#
#[[bin]]
#name = "fleetc"
#path = "src/bin/fleetc/main.rs"
#
#[[bin]]
#name = "fleetls"
#path = "src/bin/fleetls/main.rs"
#
#[dependencies]
#indent = "0.1.1"
#indoc = "2.0.6"
#inkwell = { version = "0.5.0", features = [
#    "llvm18-0-force-static",
#], optional = true }
#itertools = "0.14.0"
#js-sys = "0.3.77"
##tokio = { version = "1.44.2", features = ["full"] }
##tokio-util = { version = "0.7.15", features = ["compat"] }
#tower-lsp = { version = "0.20.0", features = [
#    "runtime-agnostic",
#], default-features = false }
#
#[features]
#llvm_backend = ["dep:inkwell"]
##default = ["llvm_backend"]
