[workspace]
resolver = "3"
members = ["fleet", "fleetc", "fleetls", "fleetls-lib", "fleetls-wasm"]
default-members = ["fleet", "fleetc", "fleetls", "fleetls-lib"]

[profile.dev]
opt-level = 1 # used to avoid stack overflows in debug builds

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
