[package]
name = "fleet"
version = "0.1.0"
edition = "2024"

[dependencies]
indent = "0.1.1"
indoc = "2.0.6"
inkwell = { version = "0.5.0", features = [
    "llvm18-0-force-static",
], optional = true }
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3.20.0"

[features]
llvm_backend = ["dep:inkwell"]
default = ["llvm_backend"]
