[package]
name = "fleetls-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
fleetls-lib = { path = "../fleetls-lib", default-features = false}
futures = "0.3.21"
js-sys = "0.3.57"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = { version = "0.4.30", features = ["futures-core-03-stream"] }
wasm-streams = "0.2.3"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "console",
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
]

[features]
default = ["fleetls-lib/runtime-agnostic"]
