[package]
name = "fleetls"
version = "0.1.0"
edition = "2024"

[dependencies]
fleetls-lib = { path = "../fleetls-lib"}
tokio = { version = "1.44.2", features = ["full"] }
tower-lsp-server = { version = "0.22.0", features = [
    "runtime-tokio",
], default-features = false }

[features]
llvm_backend = ["fleetls-lib/llvm_backend"]
default = ["llvm_backend"]
