[package]
name = "fleetls"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
fleetls-lib = { path = "../fleetls-lib" }
futures = "0.3.31"
log = "0.4.28"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
